# lyrian_web

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  heroku.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: build_test.yml  deploy.yml  main.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: api.rs  errors.rs  form.html  main.rs  routes.rs
frontend/: .prettierignore  Dockerfile  package.json
frontend/public/: index.html  parallax.js
frontend/src/: App.tsx  index.tsx  setupTests.ts
frontend/src/api/: api.test.ts  index.ts
frontend/src/assets/fontello/: config.json  demo.html
frontend/src/assets/imgs/: .gitignore
frontend/src/assets/scss/: _var.scss  reset.scss
frontend/src/components/buttons/: index.tsx
frontend/src/components/footer/: Footer.tsx  footer.module.scss
frontend/src/components/form/: index.tsx
frontend/src/components/grid/: grid.module.scss
frontend/src/components/layout/: index.tsx
frontend/src/components/loading/: Loading.tsx  loading.module.scss
frontend/src/components/modal/: index.tsx
frontend/src/hooks/: custom.ts  index.ts  types.ts  update.ts
frontend/src/mocks/: handlers.js  sample_model.json.js
frontend/src/providers/: app.tsx  context.ts
frontend/src/routes/: index.tsx
frontend/src/styles/: _var.scss  content.module.scss  reset.scss
frontend/src/types/: index.ts
frontend/src/utils/: chars.ts  clone.ts  convert.ts  errorAlert.ts  key.ts  markov.ts  random.ts  time.ts  token.ts  wordLength.ts
(+133 files in other folders)
