[package]
name = "lyrian_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
lyrian = { git = "https://github.com/LyrianBot/lyrian.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
actix-rt = "1"
